--- a/Corona-Warn-App/src/main/res/layout/fragment_submission_test_request_save.xml
+++ b/Corona-Warn-App/src/main/res/layout/fragment_submission_test_request_save.xml
@@ -15,74 +15,129 @@
         android:accessibilityLiveRegion="assertive"
         android:contentDescription="@string/submission_test_request_headline">
 
-        <include
-            android:id="@+id/submission_test_request_save_header"
-            layout="@layout/include_header"
-            android:layout_width="@dimen/match_constraint"
-            android:layout_height="wrap_content"
-            app:icon="@{@drawable/ic_back}"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:title="@{@string/submission_test_request_headline}" />
-
-        <TextView
-            android:id="@+id/submission_test_request_save_date"
-            style="@style/subtitleMedium"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/submission_test_request_save_header"
-            tools:text="Jul 31, 2020" />
-
-        <ImageView
-            android:id="@+id/submission_test_request_save_qr_image"
-            android:layout_width="0dp"
+        <ScrollView
+            android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginStart="48dp"
-            android:layout_marginTop="24dp"
-            android:layout_marginEnd="48dp"
-            android:visibility="gone"
-            app:layout_constraintDimensionRatio="1:1"
-            app:layout_constraintEnd_toEndOf="@id/guideline_end"
-            app:layout_constraintStart_toStartOf="@id/guideline_start"
-            app:layout_constraintTop_toBottomOf="@+id/submission_test_request_save_date" />
-
-        <TextView
-            android:id="@+id/submission_test_request_save_code"
-            style="@style/headline5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/guideline_action"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/submission_test_request_save_qr_image"
-            tools:text="64658-91203-67952-49" />
+            app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/submission_test_request_save_text"
-            style="@style/subtitle"
-            android:layout_width="@dimen/match_constraint"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:focusable="true"
-            android:text="@string/submission_test_request_save_text"
-            app:layout_constraintEnd_toEndOf="@id/guideline_end"
-            app:layout_constraintStart_toStartOf="@id/guideline_start"
-            app:layout_constraintTop_toBottomOf="@+id/submission_test_request_save_code" />
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <include
+                    android:id="@+id/submission_test_request_save_header"
+                    layout="@layout/include_header"
+                    android:layout_width="@dimen/match_constraint"
+                    android:layout_height="wrap_content"
+                    app:icon="@{@drawable/ic_close}"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:title="@{@string/submission_test_request_headline}" />
+
+                <ImageView
+                    android:id="@+id/submission_intro_hero_illustration"
+                    android:layout_width="@dimen/match_constraint"
+                    android:layout_height="wrap_content"
+                    android:contentDescription="@string/submission_intro_illustration_description"
+                    android:focusable="true"
+                    android:src="@drawable/ic_illustration_test"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/submission_test_request_save_header" />
+
+                <TextView
+                    android:id="@+id/submission_test_request_save_date_label"
+                    style="@style/headline5"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="24dp"
+                    android:layout_marginTop="24dp"
+                    android:layout_marginEnd="24dp"
+                    android:text="@string/submission_test_request_save_date_label"
+                    android:textStyle="bold"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/submission_test_request_save_text" />
+
+                <TextView
+                    android:id="@+id/submission_test_request_save_date"
+                    style="@style/headline5"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="24dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="24dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/submission_test_request_save_date_label"
+                    tools:text="Jul 31, 2020" />
+
+                <TextView
+                    android:id="@+id/submission_test_request_save_code_label"
+                    style="@style/headline5"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="24dp"
+                    android:layout_marginTop="24dp"
+                    android:layout_marginEnd="24dp"
+                    android:text="@string/submission_test_request_save_code_label"
+                    android:textStyle="bold"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/submission_test_request_save_date" />
+
+
+                <TextView
+                    android:id="@+id/submission_test_request_save_code"
+                    style="@style/headline5"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="24dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="24dp"
+                    android:layout_marginBottom="16dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/submission_test_request_save_code_label"
+                    tools:text="64658-91203-67952-49" />
+
+                <TextView
+                    android:id="@+id/submission_test_request_save_text"
+                    style="@style/subtitle"
+                    android:layout_width="@dimen/match_constraint"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="24dp"
+                    android:layout_marginTop="24dp"
+                    android:layout_marginEnd="24dp"
+                    android:focusable="true"
+                    android:text="@string/submission_test_request_save_text"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/submission_intro_hero_illustration" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </ScrollView>
 
         <Button
             android:id="@+id/submission_test_request_save_button_save"
             style="@style/buttonPrimary"
             android:layout_width="@dimen/match_constraint"
             android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginEnd="24dp"
             android:text="@string/submission_test_request_save_button_save"
             android:textAllCaps="true"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@id/guideline_end"
-            app:layout_constraintStart_toStartOf="@id/guideline_start"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/guideline_action" />
 
         <androidx.constraintlayout.widget.Guideline
@@ -92,9 +147,6 @@
             android:orientation="horizontal"
             app:layout_constraintGuide_end="@dimen/guideline_action" />
 
-        <include
-            android:id="@+id/include"
-            layout="@layout/merge_guidelines_side" />
-
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 </layout>
