--- a/Corona-Warn-App/src/main/res/layout/fragment_main.xml
+++ b/Corona-Warn-App/src/main/res/layout/fragment_main.xml
@@ -245,6 +245,20 @@
 
             <include layout="@layout/merge_guidelines_card" />
 
+            <TextView
+                android:id="@+id/text_environment"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:elevation="12dp"
+                android:text="DEV ENVIRONMENT"
+                android:textColor="#FF0000"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/main_tracing" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </ScrollView>
