--- a/Corona-Warn-App/src/main/res/drawable/ic_risk_details_home.xml
+++ b/Corona-Warn-App/src/main/res/drawable/ic_risk_details_home.xml
@@ -1,5 +1,4 @@
-<vector
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:name="vector"
     android:width="24dp"
     android:height="24dp"
@@ -7,9 +6,9 @@
     android:viewportHeight="24">
     <path
         android:name="path"
-        android:pathData="M 12 2.5 C 11.733 2.5 11.477 2.607 11.289 2.797 L 1.203 11.598 C 1.075 11.692 1 11.841 1 12 C 1 12.276 1.224 12.5 1.5 12.5 L 4 12.5 L 4 20.5 C 4 21.052 4.448 21.5 5 21.5 L 9 21.5 C 9.552 21.5 10 21.052 10 20.5 L 10 14.5 L 14 14.5 L 14 20.5 C 14 21.052 14.448 21.5 15 21.5 L 19 21.5 C 19.552 21.5 20 21.052 20 20.5 L 20 12.5 L 22.5 12.5 C 22.776 12.5 23 12.276 23 12 C 23 11.841 22.925 11.692 22.797 11.598 L 12.717 2.803 C 12.715 2.801 12.713 2.799 12.711 2.797 C 12.523 2.607 12.267 2.5 12 2.5 Z"
         android:fillColor="#FFFFFF"
-        android:strokeColor="#00000000"
+        android:fillType="evenOdd"
+        android:pathData="M 12 2.5 C 11.733 2.5 11.477 2.607 11.289 2.797 L 1.203 11.598 C 1.075 11.692 1 11.841 1 12 C 1 12.276 1.224 12.5 1.5 12.5 L 4 12.5 L 4 20.5 C 4 21.052 4.448 21.5 5 21.5 L 9 21.5 C 9.552 21.5 10 21.052 10 20.5 L 10 14.5 L 14 14.5 L 14 20.5 C 14 21.052 14.448 21.5 15 21.5 L 19 21.5 C 19.552 21.5 20 21.052 20 20.5 L 20 12.5 L 22.5 12.5 C 22.776 12.5 23 12.276 23 12 C 23 11.841 22.925 11.692 22.797 11.598 L 12.717 2.803 C 12.715 2.801 12.713 2.799 12.711 2.797 C 12.523 2.607 12.267 2.5 12 2.5 Z"
         android:strokeWidth="1"
-        android:fillType="evenOdd"/>
+        android:strokeColor="#00000000" />
 </vector>
