--- a/Corona-Warn-App/src/main/res/layout/fragment_main.xml
+++ b/Corona-Warn-App/src/main/res/layout/fragment_main.xml
@@ -11,6 +11,8 @@
 
         <import type="de.rki.coronawarnapp.util.formatter.FormatterAccessibilityHelper" />
 
+        <import type="de.rki.coronawarnapp.risk.RiskLevelConstants" />
+
         <variable
             name="submissionViewModel"
             type="de.rki.coronawarnapp.ui.viewmodel.SubmissionViewModel" />
@@ -192,17 +194,94 @@
                 app:layout_constraintStart_toStartOf="@+id/guideline_card_start"
                 app:layout_constraintTop_toBottomOf="@id/main_test_result" />
 
-            <include
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/main_test_positive"
-                layout="@layout/include_submission_status_card_positive"
+                style="@style/card"
                 android:layout_width="@dimen/match_constraint"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/spacing_small"
                 android:visibility="@{FormatterSubmissionHelper.formatShowSubmissionStatusPositiveCard(submissionViewModel.deviceUiState)}"
                 app:layout_constraintEnd_toStartOf="@+id/guideline_card_end"
                 app:layout_constraintStart_toStartOf="@+id/guideline_card_start"
-                app:layout_constraintTop_toBottomOf="@+id/main_test_fetching"
-                app:registerDate="@{submissionViewModel.testResultReceivedDate}" />
+                app:layout_constraintTop_toBottomOf="@+id/main_test_fetching">
+
+                <TextView
+                    android:id="@+id/submission_status_card_positive_title"
+                    style="@style/headline5"
+                    android:layout_width="@dimen/match_constraint"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="@dimen/spacing_small"
+                    android:accessibilityHeading="true"
+                    android:text="@string/submission_status_card_title_positive"
+                    app:layout_constraintEnd_toStartOf="@id/submission_status_card_positive_next"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <include
+                    android:id="@+id/submission_status_card_positive_next"
+                    layout="@layout/include_button_icon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:icon="@{@drawable/ic_forward}"
+                    app:iconDescription="@{@string/accessibility_next}"
+                    app:layout_constraintBottom_toBottomOf="@+id/submission_status_card_positive_title"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@+id/submission_status_card_positive_title" />
+
+                <include
+                    android:id="@+id/submission_status_card_positive_result_card"
+                    layout="@layout/include_test_result_card_positive"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/spacing_normal"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/submission_status_card_positive_title" />
+
+                <include
+                    android:id="@+id/divider"
+                    layout="@layout/include_divider"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/spacing_normal"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/submission_status_card_positive_result_card" />
+
+                <TextView
+                    android:id="@+id/submission_status_card_positive_result_subtitle"
+                    style="@style/headline5"
+                    android:layout_width="@dimen/match_constraint"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/spacing_normal"
+                    android:accessibilityHeading="true"
+                    android:text="@string/submission_status_card_positive_result_subtitle"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/divider" />
+
+                <LinearLayout
+                    android:id="@+id/submission_status_card_positive_result_explanation_dynamic"
+                    android:layout_width="@dimen/match_constraint"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/spacing_normal"
+                    android:orientation="vertical"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/submission_status_card_positive_result_subtitle" />
+
+                <Button
+                    android:id="@+id/submission_status_card_positive_button"
+                    style="@style/buttonPrimary"
+                    android:layout_width="@dimen/match_constraint"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/spacing_normal"
+                    android:text="@string/submission_test_result_positive_continue_button"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/submission_status_card_positive_result_explanation_dynamic" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
             <include
                 android:id="@+id/main_test_done"
