--- a/Corona-Warn-App/src/main/res/layout/include_risk_details_behavior_row.xml
+++ b/Corona-Warn-App/src/main/res/layout/include_risk_details_behavior_row.xml
@@ -20,45 +20,56 @@
 
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
+        android:id="@+id/risk_details_behavior_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:focusable="true">
+        android:orientation="vertical">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/risk_details_behavior_icon"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/circle"
-            android:backgroundTint="@{FormatterRiskHelper.formatBehaviorIconBackground(riskLevel)}"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            android:layout_marginTop="@dimen/spacing_small"
+            android:layout_marginBottom="@dimen/spacing_small"
+            android:focusable="true">
 
-            <ImageView
-                style="@style/icon"
-                android:layout_width="@dimen/icon_size_risk_details_behavior"
-                android:layout_height="@dimen/icon_size_risk_details_behavior"
-                android:layout_margin="@dimen/icon_margin_risk_details_behavior"
-                android:focusable="false"
-                android:importantForAccessibility="no"
-                android:src="@{icon}"
-                android:tint="@{FormatterRiskHelper.formatBehaviorIcon(riskLevel)}"
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/risk_details_behavior_icon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/circle"
+                android:backgroundTint="@{FormatterRiskHelper.formatBehaviorIconBackground(riskLevel)}"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <ImageView
+                    style="@style/icon"
+                    android:layout_width="@dimen/icon_size_risk_details_behavior"
+                    android:layout_height="@dimen/icon_size_risk_details_behavior"
+                    android:layout_margin="@dimen/icon_margin_risk_details_behavior"
+                    android:focusable="false"
+                    android:importantForAccessibility="no"
+                    android:src="@{icon}"
+                    android:tint="@{FormatterRiskHelper.formatBehaviorIcon(riskLevel)}"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <TextView
+                style="@style/subtitle"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/spacing_small"
+                android:text="@{body}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/risk_details_behavior_icon"
                 app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
 
-        <TextView
-            style="@style/subtitle"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/spacing_small"
-            android:text="@{body}"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/risk_details_behavior_icon"
-            app:layout_constraintTop_toTopOf="parent" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
