--- a/Corona-Warn-App/src/main/res/layout/fragment_information.xml
+++ b/Corona-Warn-App/src/main/res/layout/fragment_information.xml
@@ -103,14 +103,25 @@
                     app:subtitle="@{@string/information_contact_title}" />
 
                 <include
+                    android:id="@+id/information_data_transfert"
+                    layout="@layout/include_row"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/information_technical"
+                    app:subtitle="@{@string/information_data_transfer}" />
+
+                <include
                     android:id="@+id/information_legal"
                     layout="@layout/include_row"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/information_contact"
+                    app:layout_constraintTop_toBottomOf="@+id/information_data_transfert"
                     app:subtitle="@{@string/information_legal_title}" />
+
 
                 <TextView
                     android:id="@+id/information_version"
