--- a/Corona-Warn-App/src/main/res/navigation/nav_graph.xml
+++ b/Corona-Warn-App/src/main/res/navigation/nav_graph.xml
@@ -88,7 +88,11 @@
         android:id="@+id/settingsTracingFragment"
         android:name="de.rki.coronawarnapp.ui.settings.SettingsTracingFragment"
         android:label="@layout/fragment_settings_tracing"
-        tools:layout="@layout/fragment_settings_tracing" />
+        tools:layout="@layout/fragment_settings_tracing">
+        <action
+            android:id="@+id/action_settingsTracingFragment_to_interopCountryConfigurationFragment"
+            app:destination="@id/interopCountryConfigurationFragment" />
+    </fragment>
 
     <fragment
         android:id="@+id/settingsNotificationFragment"
@@ -363,4 +367,14 @@
         android:name="de.rki.coronawarnapp.TestRiskLevelCalculation"
         android:label="fragment_test_risk_level_calculation"
         tools:layout="@layout/fragment_test_risk_level_calculation" />
+
+    <fragment
+        android:id="@+id/interopCountryConfigurationFragment"
+        android:name="de.rki.coronawarnapp.ui.interoperability.InteroperabilityConfigurationFragment"
+        android:label="InteropCountryConfigurationFragment"
+        tools:layout="@layout/fragment_interoperability_configuration">
+        <action
+            android:id="@+id/action_interopCountryConfigurationFragment_to_settingTracingFragment"
+            app:destination="@id/settingsTracingFragment" />
+    </fragment>
 </navigation>
